--- a/index.html
+++ b/index.html
@@ -1104,9 +1104,9 @@
                 <h4>طرق الدفع:</h4>
                 <div class="methods">
                     <img src="visa.png" alt="فيزا">
-                    <img src="mastercard.png" alt="ماستركارد">
-                    <img src="mada.png" alt="مدى">
-                    <img src="apple-pay.png" alt="آبل باي">
+                    <img src="mastercard.jpg" alt="ماستركارد">
+                    <img src="unnamed.png" alt="مدى">
+                    <img src="apple.png" alt="آبل باي">
                 </div>
             </div>
             <button class="checkout-btn" id="checkout-btn"><i class="fas fa-credit-card"></i> إتمام الشراء</button>
